Botón que lleva a ver productos y fondo de corcho que no funciona

--- a/TrabajoMVC/Views/Home/Index.cshtml
+++ b/TrabajoMVC/Views/Home/Index.cshtml
@@ -4,5 +4,8 @@
 
 <div class="text-center">
     <h1 class="display-4">Aplicación web para la gestión de productos de una tienda</h1>
+    <form asp-controller="Products" asp-action="Index" >
+        <input type="submit" value="Ver productos"/>
+    </form>
     <!--<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>-->
 </div>
