--- a/TrabajoMVC/Views/Shared/_Layout.cshtml
+++ b/TrabajoMVC/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body   style="background-color: #000470;">
+<body   style="background-image:url(../../Recursos/corkboard.png); background-repeat:repeat;">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
@@ -30,12 +30,12 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3" style="color: #ffffff">
+        <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted" style="background-color: #ffffff;">
+    <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2020 - MVC App - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
